--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
 <link rel="stylesheet" href="assets/css/style.css">
 
 <body>
-        <!-- Standard Navigation (>960px) -->
-        <nav class="nav-normal">
-            <div class="brand">
-                <p>James Kline</p>
-            </div>
-            <a href="contact.html">Contact</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="index.html" id="active">About</a>
-        </nav>
+    <!-- Standard Navigation (>960px) -->
+    <nav class="nav-normal">
+        <div class="brand">
+            <p>James Kline</p>
+        </div>
+        <a href="contact.html">Contact</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="index.html" id="active">About</a>
+    </nav>
 
-        <!-- About Me -->
-        <section>
-            <div class="inner-content">
-                <h1>About Me</h1>
-                <hr>
-                <p>Hello, my name is James Kline. I’m an established software developer who is passionate about developing on
-                    all levels of the development process. I strive to produce top quality results and am eager to learn
-                    new languages, design strategies, and development practices.</p>
-                <p>Please feel free to contact me if you have any questions.</p>
-            </div>
-        </section>
+    <!-- About Me -->
+    <div class="inner-content">
+        <div class="info-block">
+            <h1>About Me</h1>
+            <hr>
+            <p>Hello, my name is James Kline. I’m an established software developer who is passionate about developing on
+                all levels of the development process. I strive to produce top quality results and am eager to learn
+                new languages, design strategies, and development practices.</p>
+            <p>Please feel free to contact me if you have any questions.</p>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
