--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>James Kline - About Me</title>
 <link rel="stylesheet" href="assets/css/style.css">
 
 <body>
@@ -16,15 +17,13 @@
     </nav>
 
     <!-- About Me -->
-    <div class="inner-content">
-        <div class="info-block">
-            <h1>About Me</h1>
-            <hr>
-            <p>Hello, my name is James Kline. I’m an established software developer who is passionate about developing on
-                all levels of the development process. I strive to produce top quality results and am eager to learn
-                new languages, design strategies, and development practices.</p>
-            <p>Please feel free to contact me if you have any questions.</p>
-        </div>
+    <div class="content-wrapper">
+        <h1>About Me</h1>
+        <hr>
+        <p>Hello, my name is James Kline. I’m an established software developer who is passionate about developing on
+            all levels of the development process. I strive to produce top quality results and am eager to learn
+            new languages, design strategies, and development practices.</p>
+        <p>Please feel free to contact me if you have any questions.</p>
     </div>
 
     <!-- Footer -->
