added image resource and updated nav

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 
 <body>
     <!-- Standard Navigation (>960px) -->
-    <nav class="nav-normal">
-        <div class="brand">
-            <p>James Kline</p>
-        </div>
-        <a href="contact.html">Contact</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="index.html" id="active">About</a>
-    </nav>
+    <div class="nav-wrapper">
+        <nav class="nav-normal">
+            <div class="brand">
+                <p>James Kline</p>
+            </div>
+            <a href="contact.html">Contact</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="index.html" id="active">About</a>
+        </nav>
+    </div>
 
     <!-- About Me -->
     <div class="content-wrapper">
