updated portfolio and contact pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </div>
 
-    <!-- About Me -->
+    <!-- Content -->
     <div class="content-wrapper">
         <h1>About Me</h1>
         <hr>
