--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,20 @@
     <div class="content-wrapper">
         <h1>Contact</h1>
         <hr>
+        <div>
+            <form>
+                <label for="nameEntry">Name</label>
+                <input type="text" id="nameEntry" name="name" placeholder="John Smith">
+
+                <label for="emailEntry">Email</label>
+                <input type="email" id="emailEntry" name="email" placeholder="email@website.com">
+
+                <label for="messageEntry">Message</label>
+                <textarea class="messageEntry" placeholder="Your message..."></textarea>
+
+                <input type="submit" value="Submit">
+            </form>
+        </div>
     </div>
 
     <!-- Footer -->
