--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,60 @@
     <div class="content-wrapper">
         <h1>Portfolio</h1>
         <hr>
+
+        <!-- Row 1 -->
+        <div class="row">
+            <div class="column">
+                <div class="project-wrapper">
+                    <img src="https://placehold.it/200x200">
+                    <p>Placeholder</p>
+                </div>
+                <div class="project-wrapper">
+                    <img src="https://placehold.it/200x200">
+                    <p>Placeholder</p>
+                </div>
+                <div class="project-wrapper">
+                    <img src="https://placehold.it/200x200">
+                    <p>Placeholder</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Row 2 -->
+        <div class="row">
+            <div class="column">
+                <div class="project-wrapper">
+                    <img src="https://placehold.it/200x200">
+                    <p>Placeholder</p>
+                </div>
+                <div class="project-wrapper">
+                    <img src="https://placehold.it/200x200">
+                    <p>Placeholder</p>
+                </div>
+                <div class="project-wrapper">
+                    <img src="https://placehold.it/200x200">
+                    <p>Placeholder</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Row 3 -->
+        <div class="row">
+            <div class="column">
+                <div class="project-wrapper">
+                    <img src="https://placehold.it/200x200">
+                    <p>Placeholder</p>
+                </div>
+                <div class="project-wrapper">
+                    <img src="https://placehold.it/200x200">
+                    <p>Placeholder</p>
+                </div>
+                <div class="project-wrapper">
+                    <img src="https://placehold.it/200x200">
+                    <p>Placeholder</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Footer -->
