added responsive css adjustments

--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,10 @@
     </div>
 
     <!-- Content -->
-    <div class="content-wrapper">
-        <h1>Contact</h1>
+    <section class="content-wrapper">
+        <header>
+            <h1>Contact</h1>
+        </header>
         <hr>
         <div>
             <form>
@@ -36,7 +38,7 @@
                 <input type="submit" value="Submit">
             </form>
         </div>
-    </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
