--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
     </div>
 
     <!-- Content -->
-    <div class="content-wrapper">
-        <h1>About Me</h1>
+    <section class="content-wrapper">
+        <header>
+            <h1>About Me</h1>
+        </header>
         <hr>
         <img class="profile-image" src="assets/images/IMG_20180602_184137.jpg">
         <p>Hello, my name is James Kline. I’m an established software developer who is passionate about developing on
             all levels of the development process. I strive to produce top quality results and am eager to learn
             new languages, design strategies, and development practices.</p>
         <p>Please feel free to contact me if you have any questions.</p>
-    </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
