--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,10 @@
     </div>
 
     <!-- Content -->
-    <div class="content-wrapper">
-        <h1>Portfolio</h1>
+    <section class="content-wrapper">
+        <header>
+            <h1>Portfolio</h1>
+        </header>
         <hr>
 
         <!-- Row 1 -->
@@ -76,7 +78,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
