--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>About Me</h1>
         </header>
         <hr>
-        <img class="profile-image" src="assets/images/IMG_20180602_184137.jpg">
+        <img class="profile-image" src="assets/images/headshot.jpg">
         <p>Hello, my name is James Kline. I’m an established software developer who is passionate about developing on
             all levels of the development process. I strive to produce top quality results and am eager to learn
             new languages, design strategies, and development practices.</p>
