--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,11 @@
             <div class="brand">
                 <p>James Kline</p>
             </div>
-            <a href="contact.html" id="active">Contact</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="index.html">About</a>
+            <ul>
+                <li><a href="contact.html" id="active">Contact</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="index.html">About</a></li>
+            </ul>
         </nav>
     </div>
 
