--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,11 @@
             <div class="brand">
                 <p>James Kline</p>
             </div>
-            <a href="contact.html">Contact</a>
-            <a href="portfolio.html" id="active">Portfolio</a>
-            <a href="index.html">About</a>
+            <ul>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="portfolio.html" id="active">Portfolio</a></li>
+                <li><a href="index.html">About</a></li>
+            </ul>
         </nav>
     </div>
 
