--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="assets/css/style.css">
 
 <body>
-    <!-- Standard Navigation (>960px) -->
+    <!-- Header/Nav -->
     <div class="nav-wrapper">
         <nav class="nav-normal">
             <div class="brand">
