fix validation errors

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                 <input type="email" id="emailEntry" name="email" placeholder="email@website.com">
 
                 <label for="messageEntry">Message</label>
-                <textarea class="messageEntry" placeholder="Your message..."></textarea>
+                <textarea id="messageEntry" placeholder="Your message..."></textarea>
 
                 <input type="submit" value="Submit">
             </form>
