--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,11 @@
         <div class="row">
             <div class="column">
                 <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200">
+                    <img src="https://placehold.it/200x200" alt="Placeholder">
                     <p>Placeholder</p>
                 </div>
                 <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200">
+                    <img src="https://placehold.it/200x200" alt="Placeholder">
                     <p>Placeholder</p>
                 </div>
                 <div class="project-wrapper">
@@ -49,15 +49,15 @@
         <div class="row">
             <div class="column">
                 <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200">
+                    <img src="https://placehold.it/200x200" alt="Placeholder">
                     <p>Placeholder</p>
                 </div>
                 <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200">
+                    <img src="https://placehold.it/200x200" alt="Placeholder">
                     <p>Placeholder</p>
                 </div>
                 <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200">
+                    <img src="https://placehold.it/200x200" alt="Placeholder">
                     <p>Placeholder</p>
                 </div>
             </div>
@@ -67,15 +67,15 @@
         <div class="row">
             <div class="column">
                 <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200">
+                    <img src="https://placehold.it/200x200" alt="Placeholder">
                     <p>Placeholder</p>
                 </div>
                 <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200">
+                    <img src="https://placehold.it/200x200" alt="Placeholder">
                     <p>Placeholder</p>
                 </div>
                 <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200">
+                    <img src="https://placehold.it/200x200 " alt="Placeholder">
                     <p>Placeholder</p>
                 </div>
             </div>
