--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>James Kline - About Me</title>
+<link rel="stylesheet" href="assets/css/reset.css">
 <link rel="stylesheet" href="assets/css/style.css">
 
 <body>
@@ -38,20 +39,12 @@
                     <img src="https://placehold.it/200x200" alt="Placeholder">
                     <p>Placeholder</p>
                 </div>
-                <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200">
-                    <p>Placeholder</p>
-                </div>
             </div>
         </div>
 
         <!-- Row 2 -->
         <div class="row">
             <div class="column">
-                <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200" alt="Placeholder">
-                    <p>Placeholder</p>
-                </div>
                 <div class="project-wrapper">
                     <img src="https://placehold.it/200x200" alt="Placeholder">
                     <p>Placeholder</p>
@@ -72,10 +65,6 @@
                 </div>
                 <div class="project-wrapper">
                     <img src="https://placehold.it/200x200" alt="Placeholder">
-                    <p>Placeholder</p>
-                </div>
-                <div class="project-wrapper">
-                    <img src="https://placehold.it/200x200 " alt="Placeholder">
                     <p>Placeholder</p>
                 </div>
             </div>
